{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 19,
  "lineage": "d0b87783-103d-dd03-40b3-abc28d37897a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-54d2a63b",
            "arn": "arn:aws:ec2:ap-south-1:960920920983:instance/i-02309be6f95863dca",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-mybucket-role",
            "id": "i-02309be6f95863dca",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d77ccaacb998831a",
            "private_dns": "ip-10-0-1-56.ap-south-1.compute.internal",
            "private_ip": "10.0.1.56",
            "public_dns": "ec2-13-233-45-44.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.45.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 200,
                "volume_id": "vol-082f8724551108c18",
                "volume_size": 8,
                "volume_type": "io1"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02146f1ce9f5760ed",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-027cb3f5d683a9a86"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3-mybucket-role-instanceprofile",
            "aws_iam_role.s3-mybucket-role",
            "aws_key_pair.mykeypair",
            "aws_security_group.example-instance",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bec24ab2b1a45b2a",
            "owner_id": "960920920983",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0f4d40bd182404d41"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-083386c194686d639",
            "owner_id": "960920920983",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bec24ab2b1a45b2a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0f4d40bd182404d41"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09003db2aeca05e4b",
            "route_table_id": "rtb-083386c194686d639",
            "subnet_id": "subnet-02146f1ce9f5760ed"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f5b5ff8adf35f02",
            "route_table_id": "rtb-083386c194686d639",
            "subnet_id": "subnet-0f445a2ab78331105"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:security-group/sg-027cb3f5d683a9a86",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027cb3f5d683a9a86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "960920920983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d40bd182404d41"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-02aa9a92a42b6d509",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-02aa9a92a42b6d509",
            "map_public_ip_on_launch": false,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0f4d40bd182404d41"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-07476ffba5a428cb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-07476ffba5a428cb2",
            "map_public_ip_on_launch": false,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0f4d40bd182404d41"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-02146f1ce9f5760ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02146f1ce9f5760ed",
            "map_public_ip_on_launch": true,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0f4d40bd182404d41"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-0f445a2ab78331105",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f445a2ab78331105",
            "map_public_ip_on_launch": true,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0f4d40bd182404d41"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:vpc/vpc-0f4d40bd182404d41",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0270501ddeac6fc6d",
            "default_route_table_id": "rtb-09e38b4fef43c6d8d",
            "default_security_group_id": "sg-0739125b51cc2e87f",
            "dhcp_options_id": "dopt-f20e8b9a",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f4d40bd182404d41",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09e38b4fef43c6d8d",
            "owner_id": "960920920983",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}